--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "axios": "^1.13.2",
     "framer-motion": "^12.23.26",
+    "i18next": "^25.7.4",
     "jwt-decode": "^3.1.2",
     "lucide-react": "^0.562.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^16.5.3",
     "react-router-dom": "^6.22.0"
   },
   "devDependencies": {
